# FancyCode

./: .clang-format  CMakeLists.txt  genProj.bat  readme.md
Source/: main.cpp
Source/cpp20/: CMakeLists.txt
Source/cpp20/private/cpp20/: FSourceLocation.cpp  FSpan.cpp
Source/cpp20/public/: FSourceLocation.h
Source/cpp20/public/cpp20/: FCoroutine.h  FSourceLocation.h  FSpan.h
